
Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with
email address.

2008-oct-07 UPDATE Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+pcbnew:
    More about copper zones filled without grid (by polygons)
    Currently for eyes and tests only (work in progress).
    now working
        thermal reliefs.
        texts on copper zones.
    To select this feature choose No Grid in zone grid filling.
    Work in progress:
    currently : not implemented:
        Removing insulated copper islands.
        trapezoidal pads


2008-Oct-6 UPDATE Dick Hollenbeck <dick@softplc.com>
================================================================================
+eeschema
    First work on arbitrary number of user fields, i.e. name/value pairs,
    per schematic component.  Use std::vector to hold fields, added GetField()
    function to SCH_COMPONENT.


2008-oct-02 UPDATE Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+pcbnew:
    First tests about copper zones filled without grid (by polygons)
    Currently for eyes and tests only.
    To select this feature choose No Grid in zone grid filling.
    Work in progress:
    currently : not implemented:
        thermal reliefs (pads are always covered by copper zones).
        texts on copper zones.
        Removing insulated copper islands.

2008-Oct-1 UPDATE Dick Hollenbeck <dick@softplc.com>
================================================================================
+pcbnew
    gen_modules_placefile.cpp: backed out of the "Cu & Cmp" centric terminology
    and moved towards using layer names which are BOARD specific.


2008-Sep-26 UPDATE Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+pcbnew: