@@ -570,7 +570,7 @@ enum main_id {
 	ID_POPUP_PCB_PLACE_ZONE_OUTLINES,
 	ID_POPUP_PCB_DRAG_ZONE_OUTLINE_SEGMENT,
 	ID_POPUP_PCB_PLACE_DRAGGED_ZONE_OUTLINE_SEGMENT,
-	ID_POPUP_ZONE_UNUSED3,
+	ID_POPUP_PCB_REMOVE_FILLED_AREAS,
 	ID_POPUP_ZONE_UNUSED4,
 
 	ID_POPUP_PCB_DELETE_MARKER,
