@@ -1,5 +1,7 @@
 set(POLYGON_SRCS
     math_for_graphics.cpp
-    PolyLine.cpp)
+    PolyLine.cpp
+    polygon_test_point_inside.cpp
+    )
 
 add_library(polygon ${POLYGON_SRCS})
