@@ -5,6 +5,18 @@ Started 2007-June-11
 Please add newer entries at the top, list the date and your name with
 email address.
 
+2008-oct-11 UPDATE Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
+================================================================================
++pcbnew:
+    More about copper zones filled without grid (by polygons)
+    Currently for tests only (work in progress).
+    now working
+        thermal reliefs.
+        texts on copper zones.
+        Removing insulated copper islands.
+    currently : not implemented:
+        trapezoidal pads
+
 2008-oct-07 UPDATE Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
 ================================================================================
 +pcbnew:
